bd align correction

--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ body{
     margin: 80px 0px 0px;
     background-color: white;
 }
-.bd1{
+.bd2{
     text-align: center;
     font-size: 20px;
 }
